--- a/action.yml
+++ b/action.yml
@@ -7,7 +7,10 @@ inputs:
     description: 'Name of the person to greet'
     required: false
     default: 'User'
-
+  test_secret:
+    description: 'A secret to test'
+    required: true
+    
 runs:
   using: 'node16'
   main: 'dist/index.js'
